# offline-judge-cli

./: Cargo.toml  LICENSE  README.md  config.yaml
editor/: Cargo.toml
editor/src/: algorithms.rs  command.rs  editor.rs  main.rs
evaluator/: Cargo.toml
evaluator/src/: config.rs  logger.rs  main.rs
evaluator/src/judge/: comparison.rs  mod.rs  verdict.rs
evaluator/src/measure/: compile.rs  mod.rs  utils.rs
evaluator/src/measure/memory/: linux.rs  mod.rs  windows.rs
evaluator/src/monitor/: linux.rs
evaluator/src/reader/: args.rs  configure.rs  mod.rs  test_cases.rs  utils.rs
evaluator/src/utils/: mod.rs
evaluator/test/accuracy/: test.go  test.java  test.rs
evaluator/test/memory/: mle.py
evaluator/test/time/: tle.py
generator/: Cargo.toml
generator/src/: advance.rs  advanced.rs  code_file.rs  configure.rs  judge_config.rs  main.rs  setting_reader.rs  test_cases.rs  utils.rs
generator/src/structs/: case_input_completer.rs  custom_types.rs  mod.rs  path_completer.rs  serializable.rs
oj-evaluator/: Cargo.toml
oj-evaluator/src/: compile.rs  config.rs
oj-evaluator/src/judge/: mod.rs  verdict.rs
oj-evaluator/src/monitor/: windows.rs
oj-evaluator/src/reader/: args.rs  error.rs  test_cases.rs  utils.rs
oj-evaluator/test/accuracy/: test.py  test.yml  test.zig
oj-evaluator/test/memory/: mle.yaml
oj-generator/: Cargo.toml
oj-generator/src/: configure.rs  main.rs  test_cases.rs  utils.rs
oj-generator/src/structs/: case_input_completer.rs  custom_types.rs
plugins/: format.md  zerojudge.py
runner/: Cargo.toml
runner/src/: config.rs  main.rs
runner/src/measure/: mod.rs  structs.rs  utils.rs
runner/src/measure/compile/: c.rs  cpp.rs  go.rs  java.rs  mod.rs  python.rs  rust.rs
runner/src/reader/: args.rs  config.rs  error.rs  mod.rs
runner/test/accuracy/: test.c
runner/test/memory/: mle.cpp  mle.java
runner/test/time/: tle.yaml
shared/: Cargo.toml
shared/src/: bridge.rs  lib.rs
