[package]
name = "evaluator"
version = "0.2.1"
edition = "2024"

[dependencies]
shared = { path = "../shared"}
clap = { version = "4.5.32", features = ["derive"] }
log = "0.4.27"
num-format = "0.4.4"
once_cell = "1.21.3"
owo-colors = "4.2.2"
prettytable-rs = "0.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yml = "0.0.12"
simplelog = "0.12.2"
win32job = "2.0.3"
windows = { version = "0.52.0", features = ["Win32_Foundation", "Win32_System_ProcessStatus", "Win32_System_Threading"] }
# similar = { version = "2.7.0", features = ["inline"] }
