[package]
name = "evaluator"
version = "0.2.3"
edition = "2024"

[dependencies]
shared = { path = "../shared"}
clap = { version = "4.5.32", features = ["derive"] }
log = "0.4.27"
num-format = "0.4.4"
once_cell = "1.21.3"
owo-colors = "4.2.2"
prettytable-rs = "0.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yml = "0.0.12"
simplelog = "0.12.2"
similar = { version = "2.7.0", features = ["inline", "unicode"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52.0", features = ["Win32_Foundation", "Win32_System_ProcessStatus", "Win32_System_Threading"] }
win32job = "2.0.3"

[target.'cfg(unix)'.dependencies]
cgroups-rs = "0.3.4"
rand = "0.9.1"
