[package]
name = "generator"
version = "0.2.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
clap = { version = "4.5.32", features = ["derive"] }
console = "0.15.11"
env = "1.0.1"
fuzzy-matcher = "0.3.7"
inquire = { version = "0.7.5", features = ["console", "editor"]}
owo-colors = "4.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yml = "0.0.12"
