[package]
name = "oj-generator"
version = "0.2.3"
edition = "2024"
[dependencies]
shared = { path = "../shared" }
clap = { version = "4.5.32", features = ["derive"] }
crossterm = "0.29.0"
env = "1.0.1"
fuzzy-matcher = "0.3.7"
inquire = { version = "0.9.1", features = ["crossterm", "editor"] }
owo-colors = "4.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yml = "0.0.12"
anyhow = "1.0.99"
fs-err = "3.1.2"
