[package]
name = "runner"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
log = "0.4.27"
num-format = "0.4.4"
once_cell = "1.21.1"
owo-colors = "4.2.0"
prettytable-rs = "0.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yml = "0.0.12"
simplelog = "0.12.2"
win32job = "2.0.2"
windows = { version = "0.52.0", features = ["Win32_Foundation", "Win32_System_ProcessStatus", "Win32_System_Threading"] }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
