[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[target.'cfg(target_os = "linux")'.dependencies]
shlex = "1.3.0"

[dependencies]
anyhow = "1.0.100"
fs-err = "3.1.2"
memmap2 = "0.9.8"
musli = { version = "0.0.149", features = ["storage"] }
serde = { version = "1.0.228", features = ["derive"] }
